# active_caster_simulation

./: CMakeLists.txt  package.xml  requirements.txt
launch/: load_robot_description.launch.xml  show.launch  simulation.launch
robots/: active_caster.urdf  active_caster.xacro
rviz/: show.rviz
scripts/: caster_vrep_gym.py  controller.py  controller_graph.py  controller_test.py  repodata.json  repodata.json.bz2  scent.py
scripts/Graph/: events.out.tfevents.1541524922.dyno  events.out.tfevents.1541792959.dyno  events.out.tfevents.1541946493.dyno  events.out.tfevents.1542278586.dyno
urdf/: plugins.gazebo.xacro
urdf/base/: active_caster_base.gazebo.xacro  active_caster_base.urdf.xacro
urdf/wheels/active_caster/: active_caster.gazebo.xacro  active_caster.urdf.xacro  drive_wheel.gazebo.xacro
