<?xml version="1.0"?>
<package format="2">
  <name>active_caster_simulation</name>
  <version>0.0.0</version>
  <description>The active_caster_simulation package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>control_toolbox</depend>

  <export>

  </export>
</package>
